# VSCode

./: README.md
VSCode + CMake + Ninja + ARMCC开发STM32/stm32f4_led/: .clang-format  CMakeLists.txt  CMakePresets.json  armcc-toolchain.cmake  stm32f4_led.code-workspace
VSCode + CMake + Ninja + ARMCC开发STM32/stm32f4_led/Code/: led.c  led.h
VSCode + CMake + Ninja + ARMCC开发STM32/stm32f4_led/Project/: JLinkLog.txt  Target 1.BAT  Template.uvguix.Joyce  Template.uvoptx  Template.uvprojx
VSCode + CMake + Ninja + ARMCC开发STM32/stm32f4_led/Project/Listings/: Template.map  startup_stm32f429xx.lst
VSCode + CMake + Ninja + ARMCC开发STM32/stm32f4_led/STM32F4_HALLIB/Inc/: stm32f4xx_hal_rcc.h
VSCode + CMake + Ninja + ARMCC开发STM32/stm32f4_led/User/: main.c  stm32f4xx_hal_conf.h
VSCode + CMake + Ninja + ARMCC开发STM32/构建篇/vscode+cmake配置stm32开发环境/: vscode+cmake配置stm32开发环境.md
VSCode + CMake + Ninja + ARMCC开发STM32/调试篇/: vscode+cmake配置stm32开发环境.md
